--- a/src/WebDebug/Web.Config
+++ b/src/WebDebug/Web.Config
@@ -6,13 +6,14 @@
 
   <Lephone.Settings>
     <add key="SqlLogRecorder" value="Lephone.Util.Logging.DebugLogRecorder, Lephone.Util" />
+    <add key="ObjectHandlerType" value="Emit" />
     <add key="AutoCreateTable" value="true" />
     <add key="DefaultContext" value="Development" />
     
     <add key="Test.DataBase" value="@Access : @~App_Data\test.mdb" />
 
     <add key="Development.DataBase" value="@SQLite : @~App_Data\test.db" />
-    <add key="Development.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.36.1, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
+    <add key="Development.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.46.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
   </Lephone.Settings>
 
   <appSettings />
