--- a/src/org.hanzify.llf.util/Lephone.Util.csproj
+++ b/src/org.hanzify.llf.util/Lephone.Util.csproj
@@ -87,7 +87,9 @@
     <Compile Include="Setting\ConfigReaderProxy.cs" />
     <Compile Include="Setting\ResourceConfigReader.cs" />
     <Compile Include="Setting\UtilSetting.cs" />
+    <Compile Include="Text\NameMapper.cs" />
     <Compile Include="Text\StringSerializer.cs" />
+    <Compile Include="Text\UnderlineNameMapper.cs" />
     <Compile Include="Text\XmlSerializer.cs" />
     <Compile Include="ClassHelper.cs">
       <SubType>Code</SubType>
