--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Data\Inner\TesterHelper.cs" />
     <Compile Include="Data\Inner\WhereConditionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="util\InflectorTest.cs" />
     <Compile Include="util\NameMapperTest.cs" />
     <Compile Include="util\timingTask\DayTimingTest.cs" />
     <Compile Include="util\timingTask\MockNowTimeProvider.cs" />
