--- a/src/WebDebug/Web.Config
+++ b/src/WebDebug/Web.Config
@@ -9,6 +9,7 @@
     <add key="ObjectHandlerType" value="Emit" />
     <add key="AutoCreateTable" value="true" />
     <add key="DefaultContext" value="Development" />
+    <add key="UsingAspxPostfix" value="true" />
     
     <add key="Test.DataBase" value="@Access : @~App_Data\test.mdb" />
 
@@ -33,7 +34,12 @@
       <add path="*" verb="*" type="Lephone.Web.RailsDispatcher, Lephone.Web" validate="true" />
     </httpHandlers>
 
-    <pages pageBaseType="Lephone.Web.Rails.PageBase, Lephone.Web" />
+    <pages pageBaseType="Lephone.Web.Rails.PageBase, Lephone.Web">
+      <namespaces>
+        <add namespace="Lephone.Web.Rails" />
+        <add namespace="DebugLib.Models" />
+      </namespaces>
+    </pages>
 
     <compilation debug="true" />
 		<authentication mode="Windows" />
