--- a/src/org.hanzify.llf.util/Lephone.Util.csproj
+++ b/src/org.hanzify.llf.util/Lephone.Util.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="CommonHelper.cs" />
     <Compile Include="FlyweightBase.cs" />
+    <Compile Include="ILBuilder.cs" />
     <Compile Include="LephoneException.cs" />
     <Compile Include="Logging\ConsoleMessageRecorder.cs" />
     <Compile Include="Logging\DebugLogRecorder.cs" />
