--- a/src/Lephone.Linq/Lephone.Linq.csproj
+++ b/src/Lephone.Linq/Lephone.Linq.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="ExpressionParser.cs" />
     <Compile Include="LinqException.cs" />
+    <Compile Include="LinqObjectModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryExtends.cs" />
   </ItemGroup>
