--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Data\Inner\TesterHelper.cs" />
     <Compile Include="Data\Inner\WhereConditionTest.cs" />
     <Compile Include="Linq\CommonTest.cs" />
+    <Compile Include="Linq\LinqObjectModelTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="util\InflectorTest.cs" />
     <Compile Include="util\NameMapperTest.cs" />
