--- a/src/Lephone.Linq/Lephone.Linq.csproj
+++ b/src/Lephone.Linq/Lephone.Linq.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ExpressionParser.cs" />
     <Compile Include="LinqException.cs" />
     <Compile Include="LinqObjectModel.cs" />
+    <Compile Include="LinqQueryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryExtends.cs" />
   </ItemGroup>
