--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -5,9 +5,10 @@
   </configSections>
 
   <Lephone.Settings>
+    <add key="Orm.UsingParamter" value="true" />
     <add key="SqlLogRecorder" value="Lephone.Util.Logging.ConsoleMessageRecorder, Lephone.Util" />
-    <add key="CacheEnabled" value="true" />
 
-    <add key="DataBase" value="@Access : @c:\test.mdb" />
+    <add key="DataBase" value="@SqlCE : @c:\test.sdf" />
+    <add key="DbProviderFactory" value="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=3.5.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
   </Lephone.Settings>
 </configuration>
