--- a/src/Lephone.Linq/Lephone.Linq.csproj
+++ b/src/Lephone.Linq/Lephone.Linq.csproj
@@ -49,7 +49,7 @@
     <Compile Include="LinqException.cs" />
     <Compile Include="LinqExpressionParser.cs" />
     <Compile Include="LinqObjectModel.cs" />
-    <Compile Include="LinqOrderSytax.cs" />
+    <Compile Include="LinqOrderSyntax.cs" />
     <Compile Include="LinqQueryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryExtends.cs" />
