--- a/src/org.hanzify.llf.Web/Lephone.Web.csproj
+++ b/src/org.hanzify.llf.Web/Lephone.Web.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{A73147C3-73C4-4590-9EC4-250AC83F4EF5}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -42,11 +42,16 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\ButtonIDConverter.cs" />
+    <Compile Include="Common\DbEntryDataSourceDesigner.cs" />
+    <Compile Include="Common\DbEntryDataSourceFieldSchema.cs" />
+    <Compile Include="Common\DbEntryDataSourceViewSchema.cs" />
+    <Compile Include="Common\DbEntryDesignerDataSourceView.cs" />
     <Compile Include="Common\LabelIDConverter.cs" />
     <Compile Include="DbEntryDataSource_Binder.cs" />
     <Compile Include="Common\PageHelper.cs" />
