--- a/src/UnitTest/UnitTest.csproj
+++ b/src/UnitTest/UnitTest.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Linq\CommonTest.cs" />
     <Compile Include="Linq\LinqObjectModelTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="util\DateAndTimeTest.cs" />
     <Compile Include="util\InflectorTest.cs" />
     <Compile Include="util\NameMapperTest.cs" />
     <Compile Include="util\timingTask\DayTimingTest.cs" />
