--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -5,10 +5,10 @@
   </configSections>
 
   <Lephone.Settings>
-    <add key="Orm.UsingParamter" value="true" />
+    <add key="NameMapper" value="Lephone.Util.Text.InflectionNameMapper, Lephone.Util" />
     <add key="SqlLogRecorder" value="Lephone.Util.Logging.ConsoleMessageRecorder, Lephone.Util" />
 
-    <add key="DataBase" value="@SqlCE : @c:\test.sdf" />
-    <add key="DbProviderFactory" value="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=3.5.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    <add key="DataBase" value="@MySql : server=127.0.0.1; user id=root; password=123; database=mytest; pooling=false" />
+    <add key="DbProviderFactory" value="@SmartDbFactory : MySql.Data, Version=5.1.2.2, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
   </Lephone.Settings>
 </configuration>
