--- a/src/org.hanzify.llf.Web/Lephone.Web.csproj
+++ b/src/org.hanzify.llf.Web/Lephone.Web.csproj
@@ -76,6 +76,7 @@
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Rails\ControlMapper.cs" />
+    <Compile Include="TransactionRequestFilter.cs" />
     <Compile Include="UrlBuilder.cs" />
     <Compile Include="WebControlException.cs" />
     <Compile Include="WebException.cs" />
