--- a/src/org.hanzify.llf.Data/Lephone.Data.csproj
+++ b/src/org.hanzify.llf.Data/Lephone.Data.csproj
@@ -161,6 +161,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Definition\SpecialNameAttribute.cs" />
     <Compile Include="Dialect\Firebird.cs" />
     <Compile Include="Dialect\Oracle.cs" />
+    <Compile Include="Dialect\PostgreSQL.cs" />
     <Compile Include="Dialect\SequencedDialect.cs" />
     <Compile Include="Dialect\SqlCE.cs" />
     <Compile Include="Driver\DbFactory.cs" />
