--- a/src/Lephone.Linq/Lephone.Linq.csproj
+++ b/src/Lephone.Linq/Lephone.Linq.csproj
@@ -56,7 +56,7 @@
     <Compile Include="LinqOrderSyntax.cs" />
     <Compile Include="LinqQueryProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryExtends.cs" />
+    <Compile Include="CommonExtends.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\org.hanzify.llf.Data\Lephone.Data.csproj">
