--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30428</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{48E4289C-FABF-46F6-AC45-AAA4224F84D3}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -106,6 +106,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="util\DateAndTimeTest.cs" />
     <Compile Include="util\InflectorTest.cs" />
+    <Compile Include="util\IocTest.cs" />
     <Compile Include="util\NameMapperTest.cs" />
     <Compile Include="util\timingTask\DayTimingTest.cs" />
     <Compile Include="util\timingTask\MockNowTimeProvider.cs" />
