--- a/src/Lephone.Util/Lephone.Util.csproj
+++ b/src/Lephone.Util/Lephone.Util.csproj
@@ -1,7 +1,7 @@
 ﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30428</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F53E89FC-F364-4C7D-A20A-CACFBF11C196}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -100,8 +100,9 @@
     <Compile Include="CommonHelper.cs" />
     <Compile Include="FlyweightBase.cs" />
     <Compile Include="ILBuilder.cs" />
-    <Compile Include="Ioc\IocEntryAttribute.cs" />
-    <Compile Include="Ioc\IocImplAttribute.cs" />
+    <Compile Include="Ioc\DependenceEntryAttribute.cs" />
+    <Compile Include="Ioc\ImplementationAttribute.cs" />
+    <Compile Include="Ioc\InjectionAttribute.cs" />
     <Compile Include="Ioc\SimpleContainer.cs" />
     <Compile Include="LephoneException.cs" />
     <Compile Include="Logging\ConsoleMessageRecorder.cs" />
