Rename folder Ioc as IoC
git-svn-id: https://dbentry.svn.codeplex.com/svn@34087 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/Lephone.Util/Lephone.Util.csproj
+++ b/src/Lephone.Util/Lephone.Util.csproj
@@ -100,10 +100,10 @@
     <Compile Include="CommonHelper.cs" />
     <Compile Include="FlyweightBase.cs" />
     <Compile Include="ILBuilder.cs" />
-    <Compile Include="Ioc\DependenceEntryAttribute.cs" />
-    <Compile Include="Ioc\ImplementationAttribute.cs" />
-    <Compile Include="Ioc\InjectionAttribute.cs" />
-    <Compile Include="Ioc\SimpleContainer.cs" />
+    <Compile Include="IoC\DependenceEntryAttribute.cs" />
+    <Compile Include="IoC\ImplementationAttribute.cs" />
+    <Compile Include="IoC\InjectionAttribute.cs" />
+    <Compile Include="IoC\SimpleContainer.cs" />
     <Compile Include="LephoneException.cs" />
     <Compile Include="Logging\ConsoleMessageRecorder.cs" />
     <Compile Include="Logging\DebugLogRecorder.cs" />
