--- a/src/Lephone.Util/Lephone.Util.csproj
+++ b/src/Lephone.Util/Lephone.Util.csproj
@@ -1,7 +1,7 @@
 ﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.30428</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F53E89FC-F364-4C7D-A20A-CACFBF11C196}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -117,10 +117,12 @@
     <Compile Include="Setting\ConfigReaderProxy.cs" />
     <Compile Include="Setting\ResourceConfigReader.cs" />
     <Compile Include="Setting\UtilSetting.cs" />
+    <Compile Include="Text\BOMChecker.cs" />
     <Compile Include="Text\InflectionNameMapper.cs" />
     <Compile Include="Text\Inflector.cs" />
     <Compile Include="Text\NameMapper.cs" />
     <Compile Include="Text\UnderlineNameMapper.cs" />
+    <Compile Include="Text\UtfEncoding.cs" />
     <Compile Include="Text\XmlSerializable.cs" />
     <Compile Include="Text\XmlSerializer.cs" />
     <Compile Include="ClassHelper.cs">
