--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{48E4289C-FABF-46F6-AC45-AAA4224F84D3}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -63,6 +63,7 @@
     <Compile Include="Data\CacheTest.cs" />
     <Compile Include="Data\CommonUsageTest.cs" />
     <Compile Include="Data\ComplexDynamicObjectTest.cs" />
+    <Compile Include="Data\CreateTable\FirebirdTest.cs" />
     <Compile Include="Data\CreateTable\SQLiteTest.cs" />
     <Compile Include="Data\DateTimeTest.cs" />
     <Compile Include="Data\DbNowTest.cs" />
@@ -104,13 +105,14 @@
     <Compile Include="Linq\CommonTest.cs" />
     <Compile Include="Linq\LinqObjectModelTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="util\Base32StringCodingTest.cs" />
     <Compile Include="util\DateAndTimeTest.cs" />
     <Compile Include="util\InflectorTest.cs" />
     <Compile Include="util\IocTest.cs" />
     <Compile Include="util\NameMapperTest.cs" />
     <Compile Include="util\TestBOMChecker.cs" />
     <Compile Include="util\timingTask\DayTimingTest.cs" />
-    <Compile Include="util\timingTask\MockNowTimeProvider.cs" />
+    <Compile Include="util\MockMiscProvider.cs" />
     <Compile Include="util\timingTask\MockTask.cs" />
     <Compile Include="util\timingTask\MockTimer.cs" />
     <Compile Include="util\timingTask\MonthTimingTest.cs" />
