--- a/src/WebDebug/Web.Config
+++ b/src/WebDebug/Web.Config
@@ -1,48 +1,89 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-  <configSections>
-    <section name="Lephone.Settings" type="Lephone.Util.Setting.NameValueSectionHandler, Lephone.Util" />
-  </configSections>
-
-  <Lephone.Settings>
-    <add key="SqlLogRecorder" value="Lephone.Util.Logging.DebugLogRecorder, Lephone.Util" />
-    <add key="ObjectHandlerType" value="Emit" />
-    <add key="DefaultContext" value="Development" />
-    <add key="UsingAspxPostfix" value="true" />
-
-    <add key="Test.AutoCreateTable" value="true" />
-    <add key="Test.DataBase" value="@Access : @~App_Data\test.mdb" />
-
-    <add key="Development.AutoCreateTable" value="true" />
-    <add key="Development.DataBase" value="@SQLite : @~App_Data\test.db" />
-    <add key="Development.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.60.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
-  </Lephone.Settings>
-
-  <appSettings />
-	<connectionStrings />
+	<configSections>
+		<section name="Lephone.Settings" type="Lephone.Util.Setting.NameValueSectionHandler, Lephone.Util"/>
+		<sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+			<sectionGroup name="scripting" type="System.Web.Configuration.ScriptingSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+				<section name="scriptResourceHandler" type="System.Web.Configuration.ScriptingScriptResourceHandlerSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+				<sectionGroup name="webServices" type="System.Web.Configuration.ScriptingWebServicesSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+					<section name="jsonSerialization" type="System.Web.Configuration.ScriptingJsonSerializationSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="Everywhere"/>
+					<section name="profileService" type="System.Web.Configuration.ScriptingProfileServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+					<section name="authenticationService" type="System.Web.Configuration.ScriptingAuthenticationServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+					<section name="roleService" type="System.Web.Configuration.ScriptingRoleServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/></sectionGroup></sectionGroup></sectionGroup></configSections>
+	<Lephone.Settings>
+		<add key="SqlLogRecorder" value="Lephone.Util.Logging.DebugLogRecorder, Lephone.Util"/>
+		<add key="ObjectHandlerType" value="Emit"/>
+		<add key="DefaultContext" value="Development"/>
+		<add key="UsingAspxPostfix" value="true"/>
+		<add key="Test.AutoCreateTable" value="true"/>
+		<add key="Test.DataBase" value="@Access : @~App_Data\test.mdb"/>
+		<add key="Development.AutoCreateTable" value="true"/>
+		<add key="Development.DataBase" value="@SQLite : @~App_Data\test.db"/>
+		<add key="Development.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.60.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139"/>
+	</Lephone.Settings>
+	<appSettings/>
+	<connectionStrings/>
 	<system.web>
-    <httpHandlers>
-      <add path="*.jpg" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
-      <add path="*.gif" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
-      <add path="*.png" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
-      <add path="*.css" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
-      <add path="*.js" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
-      <add path="*.7z" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
-      <add path="*.zip" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
-      <add path="*.rar" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
-      <add path="*.htm" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
-      <add path="*.html" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true" />
-      <add path="*" verb="*" type="Lephone.Web.RailsDispatcher, Lephone.Web" validate="true" />
-    </httpHandlers>
-
-    <pages pageBaseType="Lephone.Web.Rails.PageBase, Lephone.Web">
-      <namespaces>
-        <add namespace="Lephone.Web.Rails" />
-        <add namespace="DebugLib.Models" />
-      </namespaces>
-    </pages>
-
-    <compilation debug="true" />
-		<authentication mode="Windows" />
-	</system.web>
-</configuration>
+		<httpHandlers>
+			<add path="*.jpg" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
+			<add path="*.gif" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
+			<add path="*.png" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
+			<add path="*.css" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
+			<add path="*.js" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
+			<add path="*.7z" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
+			<add path="*.zip" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
+			<add path="*.rar" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
+			<add path="*.htm" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
+			<add path="*.html" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
+			<add path="*" verb="*" type="Lephone.Web.RailsDispatcher, Lephone.Web" validate="true"/>
+			<remove verb="*" path="*.asmx"/>
+			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+			<add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+			<add verb="GET,HEAD" path="ScriptResource.axd" validate="false" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></httpHandlers>
+		<pages pageBaseType="Lephone.Web.Rails.PageBase, Lephone.Web">
+			<namespaces>
+				<add namespace="Lephone.Web.Rails"/>
+				<add namespace="DebugLib.Models"/>
+			</namespaces>
+			<controls>
+				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+				<add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></controls></pages>
+		<compilation debug="true">
+			<assemblies>
+				<add assembly="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+				<add assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+				<add assembly="System.Xml.Linq, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+				<add assembly="System.Data.DataSetExtensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/></assemblies></compilation>
+		<authentication mode="Windows"/>
+		<httpModules>
+			<add name="ScriptModule" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></httpModules></system.web>
+	<system.codedom>
+			<compilers>
+				<compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider,System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4">
+					<providerOption name="CompilerVersion" value="v3.5"/>
+					<providerOption name="WarnAsError" value="false"/></compiler>
+				<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.VisualBasic.VBCodeProvider, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4">
+					<providerOption name="CompilerVersion" value="v3.5"/>
+					<providerOption name="OptionInfer" value="true"/>
+					<providerOption name="WarnAsError" value="false"/></compiler></compilers></system.codedom>
+	<system.webServer>
+			<validation validateIntegratedModeConfiguration="false"/>
+		<modules>
+			<remove name="ScriptModule"/>
+			<add name="ScriptModule" preCondition="managedHandler" type="System.Web.Handlers.ScriptModule, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></modules>
+		<handlers>
+			<remove name="WebServiceHandlerFactory-Integrated"/>
+			<remove name="ScriptHandlerFactory"/>
+			<remove name="ScriptHandlerFactoryAppServices"/>
+			<remove name="ScriptResource"/>
+			<add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+			<add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+			<add name="ScriptResource" verb="GET,HEAD" path="ScriptResource.axd" preCondition="integratedMode" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></handlers></system.webServer>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Extensions" publicKeyToken="31bf3856ad364e35"/>
+				<bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0"/></dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Extensions.Design" publicKeyToken="31bf3856ad364e35"/>
+				<bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="3.5.0.0"/></dependentAssembly></assemblyBinding></runtime></configuration>
