--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Data\Inner\WhereConditionTest.cs" />
     <Compile Include="Linq\CommonTest.cs" />
     <Compile Include="Linq\LinqObjectModelTest.cs" />
+    <Compile Include="Linq\RealOperateTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="util\Base32StringCodingTest.cs" />
     <Compile Include="util\DateAndTimeTest.cs" />
