--- a/src/Lephone.Web/Lephone.Web.csproj
+++ b/src/Lephone.Web/Lephone.Web.csproj
@@ -76,6 +76,9 @@
     <Compile Include="Common\IExcuteableDataSource.cs" />
     <Compile Include="Common\DbEntryMembershipUser.cs" />
     <Compile Include="Rails\LTArgs.cs" />
+    <Compile Include="Rails\MasterPageBase.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="Rails\ScaffoldingAttribute.cs" />
     <Compile Include="Rails\ScaffoldingViews.cs">
       <SubType>ASPXCodeBehind</SubType>
