--- a/src/SqlRecorder/App.config
+++ b/src/SqlRecorder/App.config
@@ -5,7 +5,7 @@
   </configSections>
 
   <Lephone.Settings>
-    <add key="Orm.UsingParamter" value="false" />
+    <add key="Orm.UsingParameter" value="false" />
 
     <add key="DataBase" value="@Access : Lephone.MockSql.Recorder.ConsoleRecorder, Lephone.MockSql" />
     <add key="DbDriver" value="Lephone.Data.Driver.CommonDbDriver, Lephone.Data" />
