--- a/src/Lephone.Web/Lephone.Web.csproj
+++ b/src/Lephone.Web/Lephone.Web.csproj
@@ -121,6 +121,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Rails\Default.htm" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Rails\Error.htm" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
